security-group.tf
# security group for VMs
resource "aws_security_group" "public" {
  name        = "prod-web-servers-sg"
  description = "Allow TLS inbound traffic"
  #vpc_id      = "${aws_vpc.tendermint.id}"
  tags = {
    Name = "public"
  }

  ingress {
    # TLS (change to whatever ports you need)
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

 ingress {
    # TLS (change to whatever ports you need)
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

egress {
    from_port       = 0
    to_port         = 0
    protocol        = "-1"
    cidr_blocks     = ["0.0.0.0/0"]
  }
}
